# chimera

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  justfile  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
samples/: 0001_init.sql  Dockerfile  HealthCheck.cs  ansible-nginx.yml  cache.ex  check-commit.sh  debounce.ts  deploy.ps1  docker-compose.yml  fetch-json.js  fib.nim  flake.nix  github-actions-rust-ci.yml  json_parser.ml  lsp-keymaps.lua  quicksort.zig  retry.py  safe_div.hs  terraform-aws-s3.tf  thread_pool.cpp  token_bucket.rs  worker.go
src/: cli.rs  config.rs  editor.rs  main.rs  reuse.rs
src/index/: db.rs  mod.rs  reindex.rs  search.rs
src/tui/: app.rs  highlight.rs  mod.rs  ui.rs
tests/: cli.rs
