[package]
name = "chimera"
version = "0.1.0"
edition = "2024"
description = "TUI for storing, searching and reusing code, scripts and templates"
authors = ["whisky"]
license = "Zlib"
repository = "https://github.com/whiskydumb/chimera"
keywords = ["tui", "snippets", "search", "cli", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
globset = "0.4.18"
ignore = "0.4.26"
nucleo-matcher = "0.3.1"
ratatui = "0.30.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros", "serde-well-known"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-fancy"] }
ulid = "1.2.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
